manifests/asset-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appdeploy
  labels:
    app: asset-app
spec:
  selector:
    matchLabels:
      app: asset-app
  replicas: 3
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: asset-app
    spec:
      containers:
        - name: appdeploy
          image: dock-reg-0001.ml/asset-app:0.1.4
          imagePullPolicy: Always
          resources:
            limits:
              memory: "400Mi"
              cpu: "200m"
            requests:
              memory: "100Mi"
              cpu: "100m"
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /ready
              port: 5000
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 3
      imagePullSecrets:
        - name: regcred
