manifests/asset-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asset-service
spec:
  type: NodePort
  ports:
    - targetPort: 5000
      port: 5000
  selector:
    app: asset-app
